# progra-teoria

./: CMakeLists.txt
1-Fundamentos/: README.md
1-Fundamentos/src/: bag.h  fraction.cpp  fraction.h  logger.cpp  logger.h  point.cpp  point.h  polynomial.cpp  polynomial.h  product.cpp  product.h  system_log.cpp  system_log.h  vector_3d.cpp  vector_3d.h
2-Templates/src/: all_true.h  apply_to_all.h  comparator.h  max_static.h  static_array.h  sum_variadic.h  tuple_printer.h
2_Templates/src/: dimensions.h  invoke_multiple.h  printer_specialized.h
3-Libreria_Estandard/src/: p2.h  p3.h
3_Libreria/src/: p4.h  p6.h  p7.h  p9.h
3_Libreria_Estandard/src/: p1.cpp  p1.h  p5.h  p8.h
4-Adaptadores/src/: P1.cpp  P1.h  P2.cpp  P2.h  P3.cpp  P3.h  P4.cpp  P4.h  P5.cpp  P5.h  P6.cpp  P6.h
4_Adaptadores/: README.md
4_Adaptadores/src/: P1.cpp  P1.h  P2.h  P3.h  P5.cpp  P6.cpp  generate_zip.sh
